--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body {
   margin: 0;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
   vertical-align: middle;
-  border: 1px solid #c2cec7;
+  outline-offset: 1px solid #c2cec7;
   border-radius: 5px;
   z-index: 50;
 }
@@ -204,6 +204,7 @@ body {
   padding-bottom: 11px;
   margin-bottom: 6px;
   border-bottom: 1px solid #d1d0ce;
+
 }
 
 .catalog-navigation li:hover,
@@ -214,6 +215,13 @@ body {
 .catalog-navigation li:active {
   background-color: #f6b5a5;
   border-radius: 0;
+}
+
+.catalog-navigation li:first-of-type:hover,
+.catalog-navigation li:first-of-type:focus,
+.catalog-navigation li:first-of-type:active {
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
 }
 
 .active {
@@ -283,8 +291,6 @@ body {
 .login-link {
   position: relative;
   display: inline-block;
-  width: 92px;
-  height: 33px;
   font-size: 14px;
   line-height: 16px;
   font-weight: bold;
@@ -296,6 +302,7 @@ body {
   box-sizing: border-box;
   padding-left: 45px;
   padding-top: 8px;
+  padding-right: 15px;
 }
 
 .login-link:hover {
@@ -342,8 +349,7 @@ body {
 .login-password-info {
   display: inline-block;
   vertical-align: middle;
-  margin-right: auto;
-
+  margin-left: 6px;       /*Отступ от кнопки занижен. Дело в том, что если не прогружается шрифт Roboto, ссылка сползают под кнопку*/
 }
 
 .login-window input:hover,
@@ -423,11 +429,15 @@ body {
   text-decoration: underline;
 }
 
+.login-password-info a:hover,
+.login-password-info a:active,
+.login-password-info a:focus {
+  color: #e84d37;
+}
+
 .basket {
   position: relative;
   display: inline-block;
-  width: 100px;
-  height: 33px;
   font-size: 14px;
   line-height: 16px;
   font-weight: bold;
@@ -437,20 +447,39 @@ body {
   background-position: 16px 6px;
   background-repeat: no-repeat;
   box-sizing: border-box;
+  padding-right: 15px;
   padding-left: 45px;
   padding-top: 8px;
 }
 
 .basket-table {
   display: none;
+  padding-left: 40px;
+  padding-top: 15px;
+  padding-right: 15px;
+  padding-bottom: 20px;
+  background-color: #f8f7f4;
+  border-radius: 5px;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
 }
 
 .inner-page-basket {
   position: relative;
-  width: 117px;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: bold;
+  border-radius: 20px;
+  background-position: 16px 6px;
+  box-sizing: border-box;
+  padding-right: 15px;
+  padding-left: 45px;
+  padding-top: 8px;
   color: #323232;
-  background-color: #f7f6f3;;
+  box-sizing: border-box;
+  background-color: #f7f6f3;
   background-image: url('../img/basket-red.svg');
+  background-repeat: no-repeat;
 }
 
 .inner-page-basket:hover .basket-table {
@@ -458,8 +487,8 @@ body {
   position: absolute;
   top: 37px;
   right: 0;
-  width: 500px;
-  z-index: 20;
+  width: 485px;
+  z-index: 25;
 }
 
 .basket-table {
@@ -478,16 +507,25 @@ body {
 }
 
 .basket-sum {
+  display: block;
   font-size: 15px;
   line-height: 18px;
   font-weight: bold;
   color: #323232;
+  text-align: right;
+  margin-top: 15px;
 }
 
-.checkout-btn {
+.checkout-button {
   font-size: 18px;
   line-height: 24px;
+  margin-left: 315px;
+  text-align: right;
+  display: block;
   color: #fefefe;
+  padding: 10px 14px;
+  border-radius: 30px;
+  margin-top: 15px;
 }
 
 .breadcrumbs a {
@@ -835,6 +873,12 @@ body {
   padding-right: 250px;
 }
 
+.blog-name:hover,
+.blog-name:focus,
+.blog-name:active {
+  color: #e84d37;
+}
+
 .blog-caption {
   font-weight: 500;
   padding: 0;
@@ -1092,9 +1136,6 @@ body {
   color: #ffffff;
 }
 
-.active-page {
-  background-color: #ffffff;
-}
 
 .active-page a {
   color: #323232;
@@ -1102,6 +1143,10 @@ body {
 
 .pagination li:hover {
   background-color: #9db1a5;
+}
+
+.active-page {
+  background-color: #ffffff;
 }
 
 .pagination li:active a{
@@ -1119,7 +1164,26 @@ body {
 
 .pagination .disabled:hover {
   background-color: inherit;
+  cursor: default;
 }
+
+.pagination .active-page:hover,
+.pagination .active-page:active {
+  background-color: #ffffff;
+  color: #353535;
+  cursor: default;
+}
+
+.active-page a:hover,
+.active-page a:active {
+  color: #353535;
+  cursor: default;
+}
+
+.pagination .back:hover {
+  cursor: default;
+}
+
 .right {
   background-image: url('../img/icon-right-small.svg');
   background-position: center;  /*Как сделать эффект наложения цвета на фоновое изображение стрелочки? Она должна быть белее*/
@@ -1560,4 +1624,57 @@ body {
   text-align: center;
   padding: 5px 9px;
   border-radius: 50%;
+}
+
+.active-menu-item {
+  background-color: #d07058;
+}
+
+.delete-field {
+  position: relative;
+}
+
+.delete {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 20px;
+  right: 14px;
+  width: 11px;
+  height: 11px;
+  font-size: 0;
+  background-color: inherit;
+  background-image: url('../img/cross-small.svg');
+  background-repeat: no-repeat;
+  border: 0;
+  cursor: pointer;
+}
+  /* background-image: url('../img/cross-small.svg'); */
+
+.basket-table td {
+  font-weight: normal;
+}
+
+.basket-table table {
+  border-collapse:collapse;
+  border-bottom: 1px solid #cacac7;
+}
+
+.basket-product-name {
+  width: 216px;
+  height: 28px;
+  padding-top: 14px;
+  padding-right: 16px;
+  padding-left: 12px;
+  padding-bottom: 13px;
+}
+
+.basket-product-weight {
+  padding-left: 6px;
+  padding-right: 14px;
+}
+
+.basket-product-price {
+  padding-left: 14px;
+  padding-right: 25px;
 }
