--- a/css/style.css
+++ b/css/style.css
@@ -1207,8 +1207,7 @@ body {
 }
 
 .second-slide,
-.thrid-slide,
-.feedback-window {
+.thrid-slide {
   display: none;    /*не отобржаются до лучших времен*/
 }
 
@@ -1680,4 +1679,87 @@ body {
 .basket-product-price {
   padding-left: 14px;
   padding-right: 25px;
+}
+
+.feedback-window {
+  position: fixed;
+  display: block;
+  width: 427px;
+  border-radius: 10px;
+  padding-top: 17px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 27px;
+  background-color: #f8f7f4;
+  z-index: 150;
+  left: 50%;
+  top: 230px;
+  margin-left: -239px;
+}
+
+.feedback-window b {
+  font-weight: 500;
+  font-family: inherit;
+  font-size: 24px;
+  line-height: 28px;
+  color: #323232;
+}
+
+.feedback-close {
+  position: absolute;
+  top: 15px;
+  right: 16px;
+  width: 18px;
+  height: 17px;
+  font-size: 0;
+  border: none;
+  cursor: pointer;
+  background-color: inherit;
+  background-image: url('../img/cross-big.svg');
+}
+
+.feedback-list {
+  padding: 0;
+  margin: 0;
+}
+
+.feedback-form {
+  margin-top: 22px;
+}
+
+.feedback-form input[type='text'],
+.feedback-form input[type='email'],
+.feedback-comment {
+  font-size: 16px;
+  line-height: 24px;
+  color: #999999;
+  font-family: inherit;
+  font-weight: 500;
+  box-sizing: border-box;
+  width: 276px;
+  padding-top: 10px;
+  padding-bottom: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: 1px solid #d3d3d2;
+  border-radius: 5px;
+  background-color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.feedback-comment {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 25px;
+}
+
+.feedback-button {
+  font-size: 18px;
+  line-height: 24px;
+  font-family: inherit;
+  font-weight: bold;
+  padding: 10px 24px;
+  border-radius: 30px;
+  display: block;
+  margin-left: auto;
 }
