--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ img {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-  padding-top: 21px;
+  padding-top: 22px;
   padding-left: 10px;
 }
 
@@ -62,7 +62,7 @@ img {
 }
 
 .main-menu {
-  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .site-navigation-item {
@@ -247,11 +247,11 @@ img {
   display: inline-block;
   position: relative;
   vertical-align: middle;
-  width: 33px;
-  height: 33px;
-  background-color: #a0b5a9;
+  width: 32px;
+  height: 32px;
+  background-color: rgba(255, 255, 255, 0.2);
   background-image: url('../img/loupe.svg');
-  background-position: center;
+  background-position: 7px 7px;
   background-repeat: no-repeat;
   border-radius: 50%;
 }
@@ -298,13 +298,13 @@ img {
   position: relative;
   vertical-align: middle;
   box-sizing: border-box;
-  padding-left: 45px;
-  padding-top: 8px;
-  padding-right: 15px;
+  padding-left: 43px;
+  padding-top: 7px;
+  padding-right: 17px;
   font-size: 14px;
   line-height: 16px;
-  font-weight: bold;
-  background-color: #a0b5a9;
+  font-weight: 500;
+  background-color: rgba(255, 255, 255, 0.2);
   background-image: url('../img/entrance-white.svg');
   background-position: 16px 6px;
   background-repeat: no-repeat;
@@ -449,13 +449,13 @@ img {
   position: relative;
   vertical-align: middle;
   box-sizing: border-box;
-  padding-right: 15px;
+  padding-right: 16px;
   padding-left: 45px;
-  padding-top: 8px;
+  padding-top: 7px;
   font-size: 14px;
   line-height: 16px;
-  font-weight: bold;
-  background-color: #a0b5a9;
+  font-weight: 500;
+  background-color: rgba(255, 255, 255, 0.2);
   background-image: url('../img/basket.svg');
   background-position: 16px 6px;
   background-repeat: no-repeat;
@@ -624,7 +624,7 @@ img {
 .contact-information-top p {
   padding: 0;
   margin: 0;
-  padding-bottom: 6px;
+  padding-bottom: 4px;
 }
 
 .phone-number {
@@ -633,8 +633,9 @@ img {
 }
 
 .slider-top p {
+  padding: 0;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 31px;
   font-size: 60px;
   line-height: 60px;
   font-weight: bold;
@@ -653,7 +654,7 @@ img {
 }
 
 .slider {
-  margin-top: -72px;
+  margin-top: -73px;
 }
 
 .slider-top {
@@ -751,14 +752,16 @@ img {
 .second-offer {
   width: 48.87%;
   box-sizing: border-box;
-  padding: 18px 28px 20px 18px;/*Текст блока не получается расположить так, как на макете (в 2 строки)*/
+  padding: 15px 20px 24px 19px;
   background-size: cover;
 }
 
 .first-offer p,
 .second-offer p {
+  margin: 0;
+  padding: 0;
   text-align: left;
-  margin-top: 16px;
+  margin-top: 14px;
   margin-bottom: 45px;
 }
 
@@ -769,7 +772,11 @@ img {
   line-height: 41px;
 }
 
-.offers-buttton {
+.offers-button {
+  padding-bottom: 14px;
+  padding-top: 10px;
+  padding-left: 23px;
+  padding-right: 23px;
   font-size: 18px;
   line-height: 22px;
 }
@@ -808,7 +815,8 @@ img {
   padding-bottom: 0;
   font-size: 16px;
   line-height: 22px;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  font-weight: 500;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .icecream-price {
@@ -873,11 +881,12 @@ img {
 .definition {
   margin: 0;
   padding: 0;
-  padding-left: 20px;
-  padding-top: 22px;
+  padding-left: 21px;
+  padding-top: 24px;
   padding-bottom: 10px;
   font-size: 24px;
   line-height: 30px;
+  font-weight: 500;
 }
 
 .advantages-list {
@@ -886,7 +895,7 @@ img {
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
-  padding-bottom: 10px;
+  padding-bottom: 11px;
   padding-left: 18px;
   font-size: 16px;
   line-height: 22px;
@@ -895,44 +904,48 @@ img {
 .making::before {
   content: '';
   position: absolute;
-  width: 49px;
-  height: 49px;
+  width: 51px;
+  height: 50px;
   background-image: url('../img/ice-cream.svg');
   background-repeat: no-repeat;
+  background-position: 2px 0;
 }
 
 .purchase::before {
   content: '';
   position: absolute;
-  width: 49px;
-  height: 49px;
-  background-image: url('../img/cow.svg'); */
+  width: 51px;
+  height: 50px;
+  background-image: url('../img/cow.svg');
   background-repeat: no-repeat;
+  background-position: 2px 0;
 }
 
 .ecology::before {
   content: '';
   position: absolute;
-  width: 49px;
-  height: 49px;
-  background-image: url('../img/eco.svg'); */
+  width: 51px;
+  height: 50px;
+  background-image: url('../img/eco.svg');
   background-repeat: no-repeat;
+  background-position: 2px 0;
 }
 
 .delivery::before {
   content: '';
   position: absolute;
-  width: 49px;
-  height: 49px;
-  background-image: url('../img/thermometer.svg'); */
+  width: 53px;
+  height: 50px;
+  background-image: url('../img/thermometer.svg');
   background-repeat: no-repeat;
+  background-position: 3px 0;
 }
 
 .blog {
-  width: 48%;
+  width: 47.2%;
   padding-top: 24px;
-  padding-left: 18px;
-  padding-bottom: 70px;
+  padding-left: 20px;
+  padding-bottom: 80px;
   font-size: 16px;
   line-height: 22px;
   color: #323232;
@@ -962,13 +975,15 @@ img {
 .blog-caption {
   margin: 0;
   padding: 0;
-  padding-bottom: 10px;
+  padding-bottom: 4px;
+  font-size: 16px;
+  line-height: 22px;
   font-weight: 500;
 }
 
 .subscription {
-  width: 47%;
-  padding: 7px;
+  width: 47.9%;
+  padding: 5px;
   font-size: 16px;
   line-height: 22px;
   color: #5a5a5a;
@@ -978,12 +993,16 @@ img {
   border-radius: 10px;
 }
 
+.subscribe-form {
+  padding-bottom: 13px;
+}
+
 .sub-info {
   display: block;
-  padding-left: 18px;
+  padding-left: 21px;
   padding-right: 18px;
   padding-bottom: 20px;
-  padding-top: 10px;
+  padding-top: 13px;
   background-color: #f8f7f4;
   border-radius: 10px;
 }
@@ -991,28 +1010,32 @@ img {
 .sub-button {
   /* display: inline-block;
   vertical-align: middle;  */
-  padding: 10px 18px;
+  padding-left: 19px;
+  padding-right: 19px;
+  padding-top: 7px;
+  padding-bottom: 11px;
   font-size: 18px;
   line-height: 24px;
   font-weight: bold;
   font-family: 'Roboto', Arial, sans-serif;
   color: #fefefe;
   border-radius: 30px;
+  margin-left: 8px;
 }
 
 .sub-info p {
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 .subscription input {
   display: inline-block;
   vertical-align: middle;
-  padding: 10px 15px;
-  padding-right: 12px;
+  padding: 9px 13px;
   width: 338px;
   font-size: 16px;
   line-height: 24px;
   font-family: inherit;
+  color: #999999;
   border: 1px solid #d3d3d2;
   border-radius: 5px;
 }
@@ -1041,8 +1064,8 @@ img {
   display: block;
   width: 290px;
   margin-left: auto;
-  padding-left: 24px;
-  padding-top: 32px;
+  padding-left: 12px;
+  padding-top: 29px;
   padding-bottom: 30px;
   padding-right: 0;
   font-size: 14px;
@@ -1050,6 +1073,15 @@ img {
   color: #323232;
   background-color: #fefefe;
   border-radius: 15px;
+}
+
+.contact-information p {
+  margin: 0;
+  padding: 0;
+}
+
+.contact-information p:nth-of-type(1n) {
+  padding-left: 13px;
 }
 
 .pin {
@@ -1062,18 +1094,10 @@ img {
   background-repeat: no-repeat;
 }
 
-.address {
-  padding-top: 0;
-  margin-top: 0;
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: bold;
-}
-
-.phone {
+.contact-information .phone {
   padding: 0;
-  margin-bottom: 0;
-  margin-top: 6px;
+  margin-top: 5px;
+  margin-bottom: 1px;
   font-size: 18px;
   line-height: 24px;
   font-weight: bold;
@@ -1294,8 +1318,8 @@ img {
 
 .caption-slide {
   text-align: center;
-  margin-top: -492px;
-  margin-bottom: 66px;
+  margin-top: -493px;
+  margin-bottom: 42px;
 }
 
 .offers-wrapper {
@@ -1331,7 +1355,7 @@ img {
   z-index: 20;
 }
 
-.product-icecream li::before:not(.inner-page) {
+.product-icecream li::before {
   content: '';
   position: absolute;
   width: 61px;
@@ -1340,6 +1364,10 @@ img {
   background-image: url('../img/hit.svg');
   background-repeat: no-repeat;
   z-index: 30;
+}
+
+.inner-page .product-icecream li::before {
+  background-image: none;
 }
 
 .product-icecream li::after {
@@ -1356,7 +1384,7 @@ img {
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 0;
-  margin-top: 40px;
+  margin-top: 28px;
 }
 
 .advantages-list li {
@@ -1367,10 +1395,10 @@ img {
 
 .advantages-list p {
   margin: 0;
-  padding-top: 10px;
+  padding-top: 11px;
   padding-bottom: 12px;
   padding-left: 58px;
-  padding-right: 33px;
+  padding-right: 30px;
   font-size: 16px;
   line-height: 22px;
 }
@@ -1869,3 +1897,20 @@ img {
   opacity: 0.3;
   z-index: 100;
 }
+
+.delivery p {
+  padding-left: 61px;
+}
+
+.purchase p {
+  padding-left: 61px;
+}
+
+.contact-information .address {
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 18px;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: bold;
+  }
